welcome.lessons.welcome.bat.bool1.NearHundred.scala.error
nearHundred:2: error: not found: value m
  m:Int
  ^nearHundred:3: error: not found: value m
  m = Math.abs(n)
  ^nearHundred:4: error: not found: value m
  return (10 < m < 100) || (m == 200)
               ^nearHundred:4: error: not found: value m
  return (10 < m < 100) || (m == 200)
                            ^